Removed table-wrapping fix

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -16,22 +16,3 @@
     font-weight: 700;
     font-family: "Roboto Slab","ff-tisa-web-pro","Georgia",Arial,sans-serif;
 }
-
-/* Temporary fix to address table cells not wrapping */
-
-/* Fix missing line-wrapping with Sphinx-RTD theme */
-/* https://rackerlabs.github.io/docs-rackspace/tools/rtd-tables.html */
-
-/* override table width restrictions */
-@media screen and (min-width: 767px) {
-
-    .wy-table-responsive table td {
-       /* !important prevents the common CSS stylesheets from overriding
-          this as on RTD they are loaded after this stylesheet */
-       white-space: normal !important;
-    }
- 
-    .wy-table-responsive {
-       overflow: visible !important;
-    }
-}
